--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,46 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Nuestra sección de contacto es tu puerta de entrada para conectarte con nosotros. ¿Tienes preguntas, comentarios o sugerencias? Estamos aquí para escucharte.">
+    <meta name="keywords" content=" BOWL , CHILE , FRUTILLAR , REGIÓN DE LOS LAGOS , CONTACTO , SUGERENCIAS, COMENTARIOS .">
     <!-- FONT AWESOME STAR-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- FONT AWESOME END-->
 
     <!-- iniicia BS -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Fin BS -->
 
-    <link rel="stylesheet" href="/estilo.css">
-    <link rel="shortcut icon" href="/multimedia/logo.png" type="image/x-icon">
-    <title>ARMA TU PEDIDO</title>
+    <link rel="stylesheet" href="../estilo.css">
+    <link rel="shortcut icon" href="../multimedia/index/logo.png" type="image/x-icon">
+    <title>Bowl | Contacto</title>
 </head>
 
 <header>
     <nav class="navbar navbar-expand-sm bg-light navbar-light">
         <div class="container-fluid">
-           <a class="navbar-brand" href="#">
-                <img src="/multimedia/logo.png" alt="" style="width:70px;" class="rounded-pill"> 
-                    </a>
-             <ul class="navbar-nav ">
-                   <li class="nav-item" >
-                    <a class="nav-link active" href="/index.html"><i class="fa-solid fa-house" style="color:green;"></i> Inicio</a>
-                   </li>
-                   <li class="nav-item">
-                   <a class="nav-link active" href="#"><i class="fa-regular fa-user" style="color:green;"></i> Nosotros</a>
-                   </li>
-                   <li class="nav-item">
-                   <a class="nav-link active" href="#"><i class="fa-regular fa-envelope" style="color: green;"></i> Contacto</a>
-                   </li>
+            <a class="navbar-brand" href="#">
+                <img src="../multimedia/index/logo.png" alt="Logo Bowl" style="width:100px;" class="rounded-pill"> 
+            </a>
+            <ul class="navbar-nav ">
+                <li class="nav-item" >
+                    <a class="nav-link active" href="../index.html"><i class="fa-solid fa-house" style="color:green;"></i> Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="./sobre-nosotros.html"><i class="fa-regular fa-user" style="color:green;"></i> Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="./contacto.html"><i class="fa-regular fa-envelope" style="color: green;"></i> Contacto</a>
+                </li>
             </ul>
-       </div>
+        </div>
     </nav>
 </header>
 
-<body class="c-d-w">
-        <h1>Podes contactarnos de las siguientes maneras</h1>
-        <div class="contacto">
-            <a href="#"><i class="fa-solid fa-user"></i></a>
-           <a href="#"> <i class="fa-brands fa-instagram"></i></a>
-           <a href="#"> <i class="fa-solid fa-envelope"></i></a>
+<body>
+    <div class="contacto_formulario">
+        <section class="left">
+        <h1>Contáctenos</h1>
+        <li>
+            <ul><i class="fa-solid fa-phone"></i> Teléfono: +56 979526190 </ul>
+            <ul><i class="fa-regular fa-envelope"></i> E-Mail: vargasbarrientoscarola@gmail.com </ul>
+        </li>
+        <div class="icon">
+            <a href="#"><i class="fa-solid fa-user" style="color: green;"></i></a>
+            <a href="#"> <i class="fa-brands fa-instagram " style="color: green;"></i></a>
+            <a href="#"> <i class="fa-solid fa-envelope" style="color: green;"></i></a>
         </div>
+        </section>
+        <hr>
+        <section class="rigth">
+            <form action="#">
+                <h2>Envíanos tu comentario: </h2>
+                <h3>Una gran visión sin grandes ídeas es irrelevante.</h3>
+                <textarea name="" id="" cols="35" rows="10" placeholder="Escribe tu comentario"></textarea> <br>
+                <input type="button" value="Enviar">
+            </form>
+        </section>
+    </div>
+<!-- footer     STAR -->
+<footer class="footer">
+    <h2>Copyright- Todos los derechos reservados</h2>
+    <div>
+        <address >
+        <p><a href="./creador-web.html"><i class="fa-solid fa-laptop fa-lg"></i></a>Desarrollado por : TOMÁS SAYÚS</p>      
+        </address>
+    </div>
+</footer>
+<!-- footer END -->
 </body>
 </html>
