--- a/pages/creador-web.html
+++ b/pages/creador-web.html
@@ -1,49 +1,68 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- FONT AWESOME STAR-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- FONT AWESOME END-->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Si estás buscando un profesional dedicado a convertir tus ideas en realidad en la web, ¡estás en el lugar adecuado! Estoy listo para colaborar contigo en tus proyectos web.">
+<meta name="keywords" content=" Desarrollo web, Sitio web, Diseño web , HTML , CSS ,RESPONSIVE DESING.">
+<!-- FONT AWESOME STAR-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<!-- FONT AWESOME END-->
 
-    <!-- iniicia BS -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- Fin BS -->
+<!-- iniicia BS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!-- Fin BS -->
 
-    <link rel="stylesheet" href="/estilo.css">
-    <link rel="shortcut icon" href="/multimedia/logo.png" type="image/x-icon">
-    <title>ARMA TU PEDIDO</title>
+<link rel="stylesheet" href="../estilo.css">
+<link rel="shortcut icon" href="../multimedia/index/logoweb.png" type="image/x-icon">
+<title>Desarrollador Web</title>
 </head>
 
-<header>
-    <nav class="navbar navbar-expand-sm bg-light navbar-light">
+<header> 
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark header">
         <div class="container-fluid">
-           <a class="navbar-brand" href="#">
-                <img src="/multimedia/logo.png" alt="" style="width:70px;" class="rounded-pill"> 
-                    </a>
-             <ul class="navbar-nav ">
-                   <li class="nav-item" >
-                    <a class="nav-link active" href="/index.html"><i class="fa-solid fa-house" style="color:green;"></i> Inicio</a>
-                   </li>
-                   <li class="nav-item">
-                   <a class="nav-link active" href="./sobre-nosotros.html"><i class="fa-regular fa-user" style="color:green;"></i> Nosotros</a>
-                   </li>
-                   <li class="nav-item">
-                   <a class="nav-link active" href="./contacto.html"><i class="fa-regular fa-envelope" style="color: green;"></i> Contacto</a>
-                   </li>
+            <a class="navbar-brand" href="#">
+                <img src="../multimedia/index/logo.png" alt="Logo Bowl" style="width:70px;" class="rounded-pill"> 
+            </a>
+            <ul class="navbar-nav ">
+                <li class="nav-item" >
+                    <a class="nav-link active" href="../index.html"><i class="fa-solid fa-house" style="color:blue;"></i> Inicio</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link active" href="./sobre-nosotros.html"><i class="fa-regular fa-user" style="color:blue;"></i> Nosotros</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link active" href="./contacto.html"><i class="fa-regular fa-envelope" style="color: blue;"></i> Contacto</a>
+                </li>
             </ul>
-       </div>
+        </div>
     </nav>
 </header>
 
 <body>
+    <div class="bodyW">
+    <section class="web">
+        <img src="../multimedia/desarrolladorWeb.jpg" alt="Tomás" height="170">
+        <h1>Tomás Sayús</h1>
+        <h3>Desarrollador Web</h3>
+        <p> Desarrollador web HTML y CSS con conocimientos para la creación de sitios web estéticamente agradables y con una sólida estructura subyacente.</p>
+        <ul>
+            <li><a href="#"> <i class="fa-brands fa-linkedin" style="color:rgba(255, 255, 0, 1.687)"></i></a></li>
+            <li><a href="#"> <i class="fa-solid fa-envelope" style="color:rgba(255, 255, 0, 1.687)"></i></a></li>
+            <li><a href="#"> <i class="fa-brands fa-instagram" style="color:rgba(255, 255, 0, 1.687)"></i></a></li>
+        </ul>
+    </section>
+</div>
+
+<!-- footerSTAR -->
+<footer class="footer">
+    <h2>Copyright- Todos los derechos reservados</h2>
+    <div>
         <address >
-            <ol>
-                creador: <a href="#">Tomás</a> <br>
-                Direccion:tomisayus.95@gmail.com <br>
-                Telefono: <br>
-            </ol>
+            <p> <a href="#"><i class="fa-solid fa-laptop fa-lg"></i></a>Desarrollado por : Tomás Sayús</p>      
         </address>
+    </div>
+</footer>
+<!-- footer END -->
 </body>
 </html>
