--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -3,45 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Queremos compartir nuestra pasión contigo y llevarte en un viaje gastronómico. ¡Conocenos y descubre el sabor detrás de nuestra historia!">
+    <meta name="keywords" content=" Historia,Equipo,Misión,Visión,Pasión,Compromiso,Cocina,Gastronomía,Comida,Trayectoria,Calidad,Creatividad,Innovación,Tradición">
     <!-- FONT AWESOME STAR-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- FONT AWESOME END-->
 
     <!-- iniicia BS -->
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Fin BS -->
 
-    <link rel="stylesheet" href="/estilo.css">
-    <link rel="shortcut icon" href="/multimedia/logo.png" type="image/x-icon">
-    <title>ARMA TU PEDIDO</title>
+    <link rel="stylesheet" href="../estilo.css">
+    <link rel="shortcut icon" href="../multimedia/index/logo.png" type="image/x-icon">
+    <title>Nosotros</title>
 </head>
 
 <header>
-    <nav class="navbar navbar-expand-sm bg-light navbar-light">
+    <nav class="navbar navbar-expand-sm bg-light navbar-light header">
         <div class="container-fluid">
-           <a class="navbar-brand" href="#">
-                <img src="/multimedia/logo.png" alt="" style="width:70px;" class="rounded-pill"> 
-                    </a>
-             <ul class="navbar-nav ">
-                   <li class="nav-item" >
-                    <a class="nav-link active" href="/index.html"><i class="fa-solid fa-house" style="color:green;"></i> Inicio</a>
-                   </li>
-                   <li class="nav-item">
-                   <a class="nav-link active" href="./sobre-nosotros.html"><i class="fa-regular fa-user" style="color:green;"></i> Nosotros</a>
-                   </li>
-                   <li class="nav-item">
-                   <a class="nav-link active" href="./contacto.html"><i class="fa-regular fa-envelope" style="color: green;"></i> Contacto</a>
-                   </li>
+            <a class="navbar-brand" href="#">
+                <img src="../multimedia/index/logo.png" alt="Logo Bowl" style="width:70px;" class="rounded-pill"> 
+            </a>
+            <ul class="navbar-nav ">
+                <li class="nav-item" >
+                    <a class="nav-link active" href="../index.html"><i class="fa-solid fa-house" style="color:green;"></i> Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="./sobre-nosotros.html"><i class="fa-regular fa-user" style="color:green;"></i> Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="./contacto.html"><i class="fa-regular fa-envelope" style="color: green;"></i> Contacto</a>
+                </li>
             </ul>
-       </div>
+        </div>
     </nav>
 </header>
 
 
 <body>
     <article class="nos">
-    <h3>Somos <strong>Bowld_Frutillar</strong>, una micro empresa en crecimientonos dedicados a la comida saludable y reciclable.</h3>
-     
+        <h1>Somos <strong>Bowl <i class="fa-solid fa-bowl-food fa-bounce " style="color: #20511f;"></i> Frutillar </strong>, una micro empresa en crecimientonos dedicados a la comida saludable y reciclable.</h1>
+        <center><hr style="width: 50%"></center>
+        <h2 class="nos-gal">Galería</h2>
         <div class="contenedor">
             <div class="item item1"></div>
             <div class="item item2"></div>
@@ -52,7 +55,19 @@
             <div class="item item7"></div>
             <div class="item item8"></div>
         </div>
-
-</article>
+    </article>
+<!-- footer     STAR -->
+    <footer class="footer">
+        <h2>Copyright- Todos los derechos reservados</h2>
+        <div>
+        <address>
+            <p> <a href="./creador-web.html"><i class="fa-solid fa-laptop  fa-lg"></i></a> Desarrollado por : TOMAS SAYUS</p>                   
+        </address>
+        </div>
+    </footer>
+<!-- footer END --> 
+<!-- iniicia BS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<!-- Fin BS -->
 </body>
 </html>
